--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,8 @@
         android:text="@string/sign_in"
         android:textSize="20sp"
         android:textColor="@color/white"
-        android:background="@drawable/button_bg" />
+        android:background="@drawable/button_bg"
+        android:onClick="onLoginClick"/>
 
 
 
