--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,6 +27,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/sign_up_button"
+        android:onClick="onRegisterClick"
         android:layout_width="147dp"
         android:layout_height="48dp"
         android:layout_margin="20dp"
