--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3f8cfe</color>
     <color name="grey">#54585a</color>
+    <color name="light_grey">#f9f9f9</color>
 </resources>
