--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="blue">#3f8cfe</color>
     <color name="grey">#54585a</color>
     <color name="light_grey">#f9f9f9</color>
+    <color name="yellow">#ffda08</color>
+    <color name="whhhw">#f2f3db</color>
 </resources>
