--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,14 @@
         android:id="@+id/action_search" />
 
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/search"
         android:layout_width="256dp"
         android:layout_height="57dp"
-        app:menu="@menu/menu"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="33dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toEndOf="@id/ImageLogo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu" />
 
     <ImageView
         android:id="@+id/ImageLogo"
@@ -40,18 +42,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/accomodation"
         android:layout_width="180dp"
         android:layout_height="61dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/button_bg"
         android:text="Accomodation"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="141dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buy_and_sale"
         android:layout_width="180dp"
         android:layout_height="61dp"
         android:background="@drawable/button_bg"
@@ -59,23 +64,27 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="141dp" />
+        app:layout_constraintStart_toEndOf="@id/accomodation"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/ImageLogo"
+        android:layout_marginTop="32dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/lost_and_found"
         android:layout_width="180dp"
         android:layout_height="61dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_bg"
         android:text="Lost-And-Found"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="210dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/accomodation" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/project"
         android:layout_width="180dp"
         android:layout_height="61dp"
         android:background="@drawable/button_bg"
@@ -83,9 +92,10 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="210dp" />
+        app:layout_constraintTop_toBottomOf="@id/buy_and_sale"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@id/lost_and_found"
+        android:layout_marginStart="20dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="180dp"
@@ -95,29 +105,33 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="280dp" />
+        app:layout_constraintTop_toBottomOf="@id/project"
+        app:layout_constraintStart_toEndOf="@id/services"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/services"
         android:layout_width="180dp"
         android:layout_height="61dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_bg"
         android:text="Services"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="280dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
 
     <ImageView
         android:layout_width="187dp"
         android:layout_height="253dp"
 
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="384dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/services" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
