--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,12 @@
         android:id="@+id/ImageLogo"
         android:layout_width="73dp"
         android:layout_height="83dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/app_logo"
         android:src="@drawable/logo"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
@@ -100,6 +101,7 @@
         android:layout_marginStart="20dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/other"
         android:layout_width="180dp"
         android:layout_height="61dp"
         android:background="@drawable/button_bg"
@@ -127,44 +129,65 @@
         app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:layout_width="198dp"
+        android:id="@+id/container1"
+        android:layout_width="200dp"
         android:layout_height="409dp"
+        android:layout_marginTop="32dp"
         android:background="@color/whhhw"
         android:radius="20dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="365dp"
-        tools:ignore="MissingConstraints" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:layout_width="205dp"
-        android:layout_height="413dp"
-        android:background="@color/whhhw"
-        android:radius="20dp"
-        tools:layout_editor_absoluteX="206dp"
-        tools:layout_editor_absoluteY="422dp"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:layout_width="183dp"
-        android:layout_height="244dp"
-        android:src="@drawable/img"
-        tools:layout_editor_absoluteX="11dp"
-        tools:layout_editor_absoluteY="374dp"
-        tools:ignore="MissingConstraints" />
-
-
-    <TextView
-        android:layout_width="183dp"
-        android:layout_height="136dp"
-        android:text="Продам 3-х комнатную квартиру в центре города \n 19 500 000 тенге"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/services" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:layout_width="200dp"
+        android:layout_height="413dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/whhhw"
+        android:radius="20dp"
+        app:layout_constraintStart_toEndOf="@id/container1"
+        app:layout_constraintTop_toBottomOf="@id/other"
+        android:layout_marginTop="88dp"/>
+
+    <ImageView
+        android:id="@+id/item_photo"
+        android:layout_width="190dp"
+        android:layout_height="204dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
+        android:src="@drawable/example_item_photo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/services" />
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Today 11:23"
+    android:layout_marginTop="8dp"
+    app:layout_constraintTop_toBottomOf="@id/item_photo"
+    app:layout_constraintStart_toStartOf="@id/item_name"/>
+
+    <TextView
+        android:id="@+id/item_name"
+        android:layout_width="189dp"
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Продам 3-х комнатную квартиру в центре города"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_photo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="19 500 000 тенге"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/item_name"
+        app:layout_constraintTop_toBottomOf="@id/item_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
