--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/home"
+    <item android:id="@+id/ic_home"
         android:title="Home"
         android:icon="@drawable/ic_baseline_home_24"/>
 
-    <item android:id="@+id/create_announcement"
+    <item android:id="@+id/ic_create_announcement"
         android:title="Create"
         android:icon="@drawable/ic_baseline_add_circle_24"/>
 
-    <item android:id="@+id/settings"
+    <item android:id="@+id/ic_settings"
         android:title="Settings"
         android:icon="@drawable/ic_baseline_settings_24"/>
 
-    <item android:id="@+id/profile"
+    <item android:id="@+id/ic_profile"
         android:title="Profile"
         android:icon="@drawable/ic_baseline_person_24"/>
 </menu>
