--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,198 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="409dp"
-    android:layout_height="729dp">
-<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/light_grey">
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-38dp"
-        tools:ignore="MissingConstraints" />
-
-    <ListView
-        android:id="@+id/action_search"
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/ImageLogo"
-        android:layout_width="73dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:contentDescription="@string/app_logo"
-        android:src="@drawable/logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search"
-        android:layout_width="256dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toEndOf="@id/ImageLogo"
+    <ScrollView
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/menu" />
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/accomodation"
-        android:layout_width="180dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/button_bg"
-        android:text="Accomodation"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="409dp"
+        android:layout_height="729dp">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buy_and_sale"
-        android:layout_width="180dp"
-        android:layout_height="61dp"
-        android:background="@drawable/button_bg"
-        android:text="Buy/sale"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@id/accomodation"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/ImageLogo"
-        android:layout_marginTop="32dp"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/lost_and_found"
-        android:layout_width="180dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_bg"
-        android:text="Lost-And-Found"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/accomodation" />
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="-38dp"
+            tools:ignore="MissingConstraints,NestedScrolling" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/project"
-        android:layout_width="180dp"
-        android:layout_height="61dp"
-        android:background="@drawable/button_bg"
-        android:text="Project"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/buy_and_sale"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@id/lost_and_found"
-        android:layout_marginStart="20dp"/>
+        <ListView
+            android:id="@+id/action_search"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints,NestedScrolling" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/other"
-        android:layout_width="180dp"
-        android:layout_height="61dp"
-        android:background="@drawable/button_bg"
-        android:text="Other"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/project"
-        app:layout_constraintStart_toEndOf="@id/services"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"/>
+        <ImageView
+            android:id="@+id/ImageLogo"
+            android:layout_width="73dp"
+            android:layout_height="83dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:contentDescription="@string/app_logo"
+            android:src="@drawable/logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/services"
-        android:layout_width="180dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_bg"
-        android:text="Services"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="256dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toEndOf="@id/ImageLogo"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/menu" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/container1"
-        android:layout_width="200dp"
-        android:layout_height="409dp"
-        android:layout_marginTop="32dp"
-        android:background="@color/whhhw"
-        android:radius="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/services" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:layout_width="200dp"
-        android:layout_height="413dp"
-        android:layout_marginStart="8dp"
-        android:background="@color/whhhw"
-        android:radius="20dp"
-        app:layout_constraintStart_toEndOf="@id/container1"
-        app:layout_constraintTop_toBottomOf="@id/other"
-        android:layout_marginTop="88dp"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/accomodation"
+            android:layout_width="180dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/accommodation"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
-    <ImageView
-        android:id="@+id/item_photo"
-        android:layout_width="190dp"
-        android:layout_height="204dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:src="@drawable/example_item_photo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/services" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buy_and_sale"
+            android:layout_width="180dp"
+            android:layout_height="61dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/buy_sale"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@id/accomodation"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toBottomOf="@id/ImageLogo"
+            android:layout_marginTop="32dp"/>
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Today 11:23"
-    android:layout_marginTop="8dp"
-    app:layout_constraintTop_toBottomOf="@id/item_photo"
-    app:layout_constraintStart_toStartOf="@id/item_name"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/lost_and_found"
+            android:layout_width="180dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/lost_and_found"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/accomodation" />
 
-    <TextView
-        android:id="@+id/item_name"
-        android:layout_width="189dp"
-        android:layout_height="100dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="32dp"
-        android:text="Продам 3-х комнатную квартиру в центре города"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_photo" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/project"
+            android:layout_width="180dp"
+            android:layout_height="61dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/project"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/buy_and_sale"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@id/lost_and_found"
+            android:layout_marginStart="20dp"/>
 
-    <TextView
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/other"
+            android:layout_width="180dp"
+            android:layout_height="61dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/other"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/project"
+            app:layout_constraintStart_toEndOf="@id/services"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/services"
+            android:layout_width="180dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/services"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/container1"
+            android:layout_width="200dp"
+            android:layout_height="409dp"
+            android:layout_marginTop="32dp"
+            android:background="@color/whhhw"
+            android:radius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/services" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:layout_width="200dp"
+            android:layout_height="413dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/whhhw"
+            android:radius="20dp"
+            app:layout_constraintStart_toEndOf="@id/container1"
+            app:layout_constraintTop_toBottomOf="@id/other"
+            android:layout_marginTop="88dp"/>
+
+        <ImageView
+            android:id="@+id/item_photo"
+            android:layout_width="190dp"
+            android:layout_height="204dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="44dp"
+            android:src="@drawable/example_item_photo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/services"
+            android:contentDescription="@string/todo" />
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="19 500 000 тенге"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/item_name"
-        app:layout_constraintTop_toBottomOf="@id/item_name" />
+        android:text="@string/today_11_23"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/item_photo"
+        app:layout_constraintStart_toStartOf="@id/item_name"/>
+
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="189dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="32dp"
+            android:text="@string/_3"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_photo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/_19_500_000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/item_name"
+            app:layout_constraintTop_toBottomOf="@id/item_name" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -210,4 +219,3 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
