--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -14,8 +14,10 @@
         android:src="@drawable/crest"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView"
@@ -41,25 +43,25 @@
         android:background="@drawable/button_bg2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="16dp"
         android:src="@drawable/plusik"
         app:flow_horizontalAlign="center"
         app:layout_constraintStart_toStartOf="@id/imageButton"
-        tools:layout_editor_absoluteY="242dp" />
+        tools:layout_editor_absoluteY="244dp" />
 
     <TextView
-        android:layout_width="194dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="252dp"
+        android:layout_width="201dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginTop="244dp"
         android:text="ADD \nPHOTO"
         android:textColor="@color/black"
         android:textSize="35dp"
@@ -155,8 +157,8 @@
         android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="682dp" />
+        tools:layout_editor_absoluteY="731dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
