--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,8 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="14dp"
-        tools:layout_editor_absoluteY="142dp" />
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="141dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="180dp"
@@ -138,7 +138,7 @@
     <ImageView
         android:layout_width="183dp"
         android:layout_height="244dp"
-        android:src="@drawable/img"
+        android:src="@drawable/bath"
         tools:layout_editor_absoluteX="11dp"
         tools:layout_editor_absoluteY="374dp"
         tools:ignore="MissingConstraints" />
